# discrete

./: ChangeLog.md  README.md  discrete.cabal
Data/: Discrete.hs  Modular.hs
src/: Discrete.hs
