name:                discrete
version:             0.1.0.0
synopsis:            replacement for enum
description:         Replacement for GHC.Enum.Enum, provides instances for all
                     types in base.
homepage:            https://github.com/chessai/discrete
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Discrete
  other-extensions:    DeriveAnyClass, DerivingStrategies, GADTs, GeneralizedNewtypeDeriving, MagicHash, NoImplicitPrelude, StandaloneDeriving, TypeOperators
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010
